<?xml version="1.0"?>
<package format="3">
  <name>ros2_ddsm115_driver</name>
  <version>0.0.0</version>
  <description>The ros_ddsm115_driver package</description>

  <maintainer email="piyush.mahamuni@peepulagri.com">Piyush</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
